Swagger2与SpringBoot3.x版本不兼容

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=demo
-# ?????
+#
 spring.devtools.restart.enabled=true
-#??????
+
 spring.devtools.restart.additional-paths=src/main/java
 #??classpath?????WEB-INF??????????
 spring.devtools.restart.exclude=WEB-static/**
 
+#spring.mvc.static-path-pattern=/images/**
+
+spring.web.resources.static-locations=/upload/
+#??locations=classpath:/static , /upload/ ??????static?upload?????
