--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,22 @@
 <!--			<scope>runtime</scope>-->
 			<optional>true</optional>
 		</dependency>
+		<!--添加Swagger2相关功能-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springdoc</groupId>-->
+<!--			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--			<version>2.2.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
