--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.devtools.restart.exclude=WEB-static/**
 
 spring.web.resources.static-locations=/upload/
 #??locations=classpath:/static , /upload/ ??????static?upload?????
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/usst?useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=153153ea
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
