--- a/pom.xml
+++ b/pom.xml
@@ -96,8 +96,13 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.20</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.5.RELEASE</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
